@@ -1,0 +1,13 @@
+import styled from 'styled-components/native';
+
+export const Container = styled.View`
+  padding-left: 10px;
+  justify-content: center;
+  flex-direction: row;
+`;
+
+export const Label = styled.Text`
+  color: #77f;
+  font-weight: bold;
+  font-size: 15px;
+`;
