@@ -1,1 +1,0 @@
-export type EventTypes = boolean | number | string;
